style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

#root,
#__next {
  isolation: isolate;
}

:root {
  background: #333;
}
body {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100vh;
  background-color: forestgreen;
}
.header {
  height: 200px;
  width: 100%;

  background-color: rebeccapurple;
}
.content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
}
.board {
  display: grid;
  width: 450px;
  height: 450px;

  grid-template-columns: repeat(3, 1fr);

  border: 2px black solid;
}
.board-place {
  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 36px;
  font-weight: bold;

  border: 1px solid black;
}

